[gd_scene load_steps=15 format=3 uid="uid://cbu86pk53ybku"]

[ext_resource type="Script" path="res://Scripts/Plantie.gd" id="1_fj0le"]
[ext_resource type="Texture2D" uid="uid://mycrvghlsy6c" path="res://Assets/Enemies/Plant/Idle (44x42).png" id="1_xj0h8"]
[ext_resource type="Texture2D" uid="uid://dlqbslh37yaqr" path="res://Assets/Enemies/Plant/Attack (44x42).png" id="2_dunbb"]
[ext_resource type="AudioStream" uid="uid://lukyek5g4pa2" path="res://Sounds/Audio/footstep_carpet_003.ogg" id="4_8am8n"]
[ext_resource type="Texture2D" uid="uid://bipnny8cqke20" path="res://Assets/Enemies/Plant/Hit (44x42).png" id="4_vfics"]
[ext_resource type="AudioStream" uid="uid://386u3i7orv2t" path="res://Sounds/Sounds/enemy_hit.wav" id="5_77i7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma2ch"]
size = Vector2(28, 28)

[sub_resource type="Animation" id="Animation_l581k"]
resource_name = "Idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xj0h8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../anima:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_0201g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_xj0h8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../anima:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_o53ft"]
resource_name = "attack"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dunbb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../sounds")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_8am8n")
}],
"times": PackedFloat32Array(0.4)
}
tracks/4/use_blend = true
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../anima:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_pjp6j"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_vfics")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../sounds")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_77i7i")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42rvo"]
_data = {
"Idle": SubResource("Animation_l581k"),
"RESET": SubResource("Animation_0201g"),
"attack": SubResource("Animation_o53ft"),
"hit": SubResource("Animation_pjp6j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh7yw"]
size = Vector2(295, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gum38"]
size = Vector2(28, 6)

[node name="plantie" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_fj0le")

[node name="texture" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -21)
texture = ExtResource("1_xj0h8")
hframes = 11

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(3, -14)
shape = SubResource("RectangleShape2D_ma2ch")

[node name="anima" type="AnimationPlayer" parent="."]
root_node = NodePath("../collision")
autoplay = "Idle"
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_42rvo")
}

[node name="spawnShoot" type="Marker2D" parent="."]
position = Vector2(-20, -23)

[node name="playerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="collision" type="CollisionShape2D" parent="playerDetector"]
position = Vector2(3.5, -20.5)
shape = SubResource("RectangleShape2D_kh7yw")
debug_color = Color(0.835294, 0.384314, 0.137255, 0.419608)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 64

[node name="collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2(3, -32)
shape = SubResource("RectangleShape2D_gum38")
debug_color = Color(0.937255, 0, 0, 0.419608)

[node name="sounds" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0

[connection signal="body_entered" from="playerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
